Refactor casino API contracts and configuration